# counters-and-anymap

./: CMakeLists.txt  Doxyfile  README
include/: Counter.h  CounterFactories.h  CounterMap.h  Counters.h
include/AnyMap/: AnyMap.hpp
include/Counters/: Counter.hpp  CounterFactories.hpp  CounterMap.hpp  NumCache.hpp
include/Counters/details/: _Counter.IMPL.hpp  _CounterMap.IMPL.hpp
include/MapTypeErasure/: AnyMap.hpp
include/Util/: NumCache.h
include/counterDetails/: CounterImpl.hpp  CounterMapImpl.hpp
src/: CMakeLists.txt  main.cpp
test/: AnyMapTests.hpp  CMakeLists.txt  CounterMapTests.hpp  CounterTests.hpp  Tests.cpp
test/data/: rock-n-roll-nerd
