CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(EachItr)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x -Wall")

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

FIND_PACKAGE( BOOST )
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

